--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^5.5.3
   cloud_firestore: ^5.0.0
 
+  provider: ^6.1.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
