--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - lib/assets/img/icons8-google-480.png
+    - images/icons8-google-480.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
