--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   go_router: ^15.1.1
   flutter_riverpod: ^2.6.1
   google_fonts: ^6.2.1
+  percent_indicator: ^4.2.2
+  flutter_launcher_icons: ^0.13.1 # vérifie la dernière version sur pub.dev
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,8 +43,14 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
   cloud_firestore: ^5.0.0
+  fl_chart: ^1.0.0
 
   provider: ^6.1.5
+
+flutter_launcher_icons:
+  image_path: "assets/icon.png"  # le chemin vers ton icône
+  android: true
+  ios: true
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/img/icons8-google-480.png
-    - images/icons8-google-480.png
+    - lib/assets/img/icon.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
